# du_hast_r

./: .gitignore  Cargo.toml  README.md  flake.nix  request.json
R/: async_install.R
scripts/: benchmark_async_vs_baselines.R  benchmark_config.json  benchmark_config_cli_dynamic.json  benchmark_config_cli_dynamic_heavy.json  benchmark_config_cli_dynamic_singlecell.json  benchmark_config_cli_dynamic_singlecell_dedicated.json  benchmark_config_smoke.json  demo_async_install.R  du_hast_r_runner.R  summarize_benchmark_results.R
src/: du_hast_r.rs  lib.rs  main.rs
tests/: cli_cached_success.rs
turbo/: flake.nix
turbo++/: flake.nix
